--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>My new CV</title>
+    <title>My CV</title>
   </head>
   <body>
     <p>I'm Oleh</p>
+    <a href="http://oleh-zuiev.github.io/Oleh-Zuiev-CV.pdf">Here is CV</a>
   </body>
 </html>
