--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <p>I'm Oleh</p>
     <a href="http://oleh-zuiev.github.io/Oleh-Zuiev-CV.pdf">Here is CV</a>
-    <a href="http://oleh-zuiev.github.io/Ol_CV_Pl.pdf">Here is CV_2</a>
+    <!-- <a href="http://oleh-zuiev.github.io/Ol_CV_Pl.pdf">Here is CV_2</a> -->
   </body>
 </html>
